# rsdkv4-plus

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
AppImage/: README.md  build.sh  usage.txt
AppImage/AppDir/: .DirIcon  AppRun  RSDKv4.desktop
AppImage/AppDir/usr/lib/: libGLEW.so.2.2.0  libtheoradec.so.1.1.4
RSDKv4/: API.cpp  API.hpp  Animation.hpp  Audio.cpp  Audio.hpp  Collision.cpp  Collision.hpp  Debug.cpp  Debug.hpp  DiscordHeaders.hpp  Drawing.cpp  Drawing.hpp  Ini.cpp  Input.cpp  Input.hpp  Math.cpp  Math.hpp  ModAPI.cpp  ModAPI.hpp  Networking.cpp  Object.cpp  Object.hpp  Palette.cpp  Palette.hpp  RSDKv4-sdl1.vcxproj  RSDKv4-sdl2.vcxproj  RSDKv4.rc  RSDKv4.vcxproj  RSDKv4.vcxproj.filters  Reader.cpp  Reader.hpp  Renderer.cpp  RetroEngine.cpp  RetroEngine.hpp  Scene.cpp  Scene.hpp  Scene3D.cpp  Scene3D.hpp  Script.cpp  Script.hpp  (+8 more)
RSDKv4/NativeObjects/: AboutScreen.cpp  AchievementsMenu.cpp  DialogPanel.cpp  InstructionsScreen.cpp  MenuControl.cpp  MultiplayerScreen.cpp  OptionsMenu.cpp  PauseMenu.cpp  PlayerSelectScreen.cpp  RecordsScreen.cpp  RetroGameLoop.cpp  SaveSelect.cpp  SettingsScreen.cpp  StaffCredits.cpp  TimeAttack.cpp  TitleScreen.cpp  VirtualDPad.cpp  VirtualDPadM.cpp
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/decomp/rsdkv4/: RSDKv4.java
android/app/src/main/res/values/: strings.xml
flatpak/: icons  io.github.rsdk_pkg.rsdkv4_plus.desktop  io.github.rsdk_pkg.rsdkv4_plus.metainfo.xml
